Rename app to MediaFlow and align UI

--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,14 @@
 # DATABASE (MariaDB/MySQL)
 # ===========================================
 # Pour Prisma Migrate (prisma.config.ts)
-DATABASE_URL="mysql://root:root@localhost:3306/picflow"
+DATABASE_URL="mysql://root:root@localhost:3306/mediaflow"
 
 # Pour l'adapter MariaDB (src/lib/prisma.ts)
 DB_HOST="localhost"
 DB_PORT="3306"
 DB_USER="root"
 DB_PASSWORD="root"
-DB_NAME="picflow"
+DB_NAME="mediaflow"
 
 # ===========================================
 # NEXTAUTH
@@ -34,7 +34,7 @@ SUPER_ADMIN_EMAILS="admin@example.com,admin2@example.com"
 # ===========================================
 S3_ENDPOINT="https://s3.gra.io.cloud.ovh.net"
 S3_REGION="gra"
-S3_BUCKET="picflow"
+S3_BUCKET="mediaflow"
 S3_ACCESS_KEY_ID="your-access-key"
 S3_SECRET_ACCESS_KEY="your-secret-key"
 
